Fixed the positioning of the dark mode button.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -34,7 +34,6 @@ body {
 		}
 	}
 	&__dark-mode {
-		height: 100%;
 		position: absolute;
 		right: 2em;
 		padding: 1em;
